<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="@dimen/_10dp"
        android:paddingEnd="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_99acres_app_to_auto_start"
            android:textAppearance="@style/Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/please_enable_auto_start"
            android:textAppearance="@style/Content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvContent"
            app:srcCompat="@drawable/ic_logo" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:text="@string/_99acres"
            android:textAppearance="@style/Content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
            app:layout_constraintStart_toEndOf="@+id/ivLogo"
            app:layout_constraintTop_toTopOf="@+id/ivLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRunningLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2dp"
            android:layout_marginLeft="2dp"
            android:background="@drawable/border_green_1dp"
            android:padding="2dp"
            android:text="@string/running"
            android:textAppearance="@style/Content"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/_10sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvLabel"
            app:layout_constraintStart_toEndOf="@+id/tvLabel"
            app:layout_constraintTop_toTopOf="@+id/tvLabel"
            tools:ignore="SmallSp" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/smAutoRun"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/tvRunningLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvRunningLabel"
            app:layout_constraintTop_toTopOf="@+id/tvRunningLabel"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAutoStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/auto_start"
            android:textAppearance="@style/ButtonContent"
            android:textColor="@color/colorSecondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <Space
            android:id="@+id/space"
            app:layout_constraintTop_toBottomOf="@+id/btnAutoStart"
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>